automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,21 @@ figcaption {
   margin: 0 auto;
   background #eee;
 }
+.col-1 {
+  /* this column will span one-third */
+  float: left;
+  width: 32%;
+  background: #ccc;
+}
+
+.col-2 {
+  float: left;
+  width: 66%;
+  background: #ccc;
+  /* this column will span two-thirds */
+}
+
+.col-3 {
+  background: #ccc;
+  /* this column will span all the entire wrapper */
+}
