--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,9 @@ figcaption {
   background: #ccc;
   /* this column will span all the entire wrapper */
 }
+[class*="col-"]{
+  margin-left: 2%;
+}
+.first{
+  margin-left: 0;
+}
