--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,11 @@ figcaption {
   color: red;
 }
 /*///////////////////////LAYOUT//////////////*/
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 .wrapper{
   width: 960px;
   margin: 0 auto;
